Add reset firmware

--- a/build.yaml
+++ b/build.yaml
@@ -15,3 +15,7 @@
 include:
   - board: corneish_zen_v2_left
   - board: corneish_zen_v2_right
+  - board: corneish_zen_v2_left
+    shield: settings_reset
+  - board: corneish_zen_v2_right
+    shield: settings_reset
